fix SONAR CI